# agent-orchestration-loop

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.beads  Dockerfile.webhook  README.md  agent-orchestration-loop.code-workspace  compose.development.yaml  compose.https.yaml  compose.yaml  pyproject.toml
.opencode/: opencode.jsonc
.opencode/agents/: code-reviewer.md  orchestrator.md  planner.md  team-orchestrator.md
deploy/caddy/: Caddyfile  Dockerfile
docs/: tool-memory.md
image/: AGENTS.md
image/.opencode/: opencode.jsonc
image/.opencode/agents/: developer.md  qa-tester.md  researcher.md  team-lead.md
image/docs/: tool-sequential-thinking.md
scripts/: attach.ps1  docker-entrypoint.sh  install-dev-tools.ps1  prompt.ps1  validate.ps1
src/webhook_receiver/: __init__.py  __main__.py  app.py  beads_loop.py  config.py  filters.py  github.py  orchestration_prompt.jinja2.md  prompts.py  runner.py  simulator.py  simulator_templates.py  workspace.py
test/: PromptPs1.Tests.ps1  ValidatePs1.Tests.ps1  run-pester-tests.ps1  test-beads-versions-consistency.sh  test-caddyfile.sh  test-compose-config.sh  test-docker-entrypoint.sh  test-opencode-json.sh  test-scan-secrets.sh
test/fixtures/github/: ping.json  (+1 more)
tests/: test_app.py  test_beads_loop.py  test_config.py  test_filters.py  test_github_webhook.py  test_integration_beads.py  test_integration_dispatch.py  test_integration_webhook.py  test_prompts.py  test_runner.py  test_simulator.py  test_simulator_templates.py  test_workspace.py
workflows/: docker-publish.yml  trivy.yml  validate.yml
(+31 files in other folders)
